--- a/index.html
+++ b/index.html
@@ -22,11 +22,56 @@
             <h1>Muskurane</h1>
             <p>Soft song by Arijit Singh</p>
 
-            <audio controls>
+            <audio  id="song">
                 <source src="128-Muskurane (Romantic) - Citylights 128 Kbps.mp3" type="audio/mpeg">
             </audio>
-            <input type="range" value="0" id="">
+            <input type="range" value="0" id="progress">
+
+            <div class="controls">
+                <div><i class="fa-solid fa-backward"></i></div>
+                <div onclick="playPause()"><i class="fa-solid fa-play" id="ctrlIcon"></i></div>
+                <div><i class="fa-solid fa-forward"></i></div>
+            </div>
         </div>
     </div>
+
+    <script>
+
+        let progress = document.getElementById("progress");
+        let song = document.getElementById("song");
+        let ctrlIcon = document.getElementById("ctrlIcon");
+
+        song.onloadedmetadata = function(){
+            progress.max = song.duration;
+            progress.value = song.currentTime;
+        }
+
+        function playPause(){
+           if(ctrlIcon.classList.contains("fa-pause")){
+            song.pause();
+            ctrlIcon.classList.remove("fa-pause");
+            ctrlIcon.classList.add("fa-play");
+           }
+           else{
+            song.play();
+            ctrlIcon.classList.add("fa-pause");
+            ctrlIcon.classList.remove("fa-play");
+           }
+        }
+
+if(song.play()){
+    setInterval(() =>{
+        progress.value = song.currentTime; 
+    },500);
+}
+
+progress.onchange = function(){
+    song.play();
+    song.currentTime = progress.value;
+    ctrlIcon.classList.add("fa-pause");
+    ctrlIcon.classList.remove("fa-play");
+}
+    </script>
+
 </body>
 </html>
